feat: rename models and update docs
