# docs/swagger.json
@@ -28,7 +28,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handlers.SyncResponse"
+                                "$ref": "#/definitions/handlers.SyncRecord"
                             }
                         }
                     }
@@ -84,7 +84,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.SyncResponse"
+                            "$ref": "#/definitions/handlers.SyncRecord"
                         }
                     }
                 }
@@ -92,18 +92,18 @@
         }
     },
     "definitions": {
-        "handlers.SyncResponse": {
+        "handlers.SyncRecord": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/redis.RedisValue"
+                    "$ref": "#/definitions/redis.SyncData"
                 },
                 "timestamp": {
                     "type": "string"
                 }
             }
         },
-        "redis.RedisValue": {
+        "redis.SyncData": {
             "type": "object",
             "properties": {
                 "message": {
